secret-csi-vault/k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: secret-csi-vault
    app.kubernetes.io/version: latest
    app.kubernetes.io/managed-by: quarkus
  name: secret-csi-vault
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: secret-csi-vault
    app.kubernetes.io/version: latest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: secret-csi-vault
    app.kubernetes.io/version: latest
    app.kubernetes.io/managed-by: quarkus
  name: secret-csi-vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: secret-csi-vault
      app.kubernetes.io/version: latest
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: secret-csi-vault
        app.kubernetes.io/version: latest
    spec:
      hostAliases:
      - ip: "172.25.150.200"
        hostnames:
        - "vault-demo.cch.com"
      serviceAccountName: vault-auth
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: registry.hub.docker.com/cch0124/secret-csi-vault:latest
          imagePullPolicy: Always
          name: secret-csi-vault
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
          - name: config
            mountPath: "/home/jboss/config"
            readOnly: true
      volumes:
      - name: config
        configMap:
          name: secret-csi-vault
          items:
          - key: application.properties
            path: application.properties
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: secret-csi-vault
    app.kubernetes.io/version: latest
    app.kubernetes.io/managed-by: quarkus
  name: secret-csi-vault
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: secret-csi-vault
                port:
                  name: http
            path: /
            pathType: Prefix
